--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,8 @@
+<html>
+<head>
+<title>Bread Recomendation</title>
+</head>
+<body>
 <center>
   <form method="POST">
      
@@ -11,3 +16,5 @@
       <label>{{ href2 }} </label>
   </form>
 </center>
+</body>
+</html>
